fix css overflow problem for ios devices

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -28,6 +28,8 @@
   display: block;
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 .mainform {
